# Baicode

./: .env.example  .gitignore  LICENSE  README.md  eval_runner.py  pyproject.toml
memory-bank/: architecture.md  eval.md  implement_plan.md  product_requirements_document.md  progress.md  project_analysis.md  tech_stack.md
src/baicode/: cli.py  config.py  llm.py
src/baicode/graph/: __init__.py  builder.py  executor.py  finalizer.py  nodes.py  planner.py  react.py  replanner.py  state.py
src/baicode/tools/: __init__.py  schemas.py  shell_exec.py  web_search.py
src/cagent/: cli.py  config.py  llm.py
src/cagent/graph/: __init__.py  builder.py  nodes.py  state.py
src/cagent/tools/: __init__.py  python_exec.py  schemas.py  web_search.py
